# team_bot

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  config.json.example
api/: Cargo.toml
api/src/: auth.rs  error.rs  lib.rs  projects.rs  tasks.rs  users.rs
assets/: index.html
entity/: Cargo.toml
entity/src/: project.rs  task.rs
migrations/: 20241114093441_create_users.down.sql  20241114093441_create_users.up.sql  20241114111529_create_projects.down.sql  20241114111529_create_projects.up.sql  20241114112319_create_tasks.down.sql  20241114112319_create_tasks.up.sql
service/: Cargo.toml
service/src/: error.rs  lib.rs
service/src/executor/: executor.rs  mod.rs
service/src/executor/actions/: mod.rs  zulip.rs
service/src/executor/workers/: gerrit.rs  mod.rs  notifier.rs  teamcity.rs
service/src/jobs/: clean.rs  exchange.rs  mod.rs
service/src/mutation/: projects.rs  tasks.rs  users.rs
service/src/query/: projects.rs  tasks.rs  users.rs
src/: main.rs  utils.rs
