[package]
name = "team-bot-api"
version = "0.1.0"
authors = ["Old Punk <roman.efremenko@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.93"
axum = { version = "0.7.7", features = ["macros"] }
axum-extra = { version = "0.9.4", features = ["cookie"] }
cron = "0.13.0"
chrono = { version = "0.4.38", features = ["serde"] }
duration-str = "0.11.2"
jsonwebtoken = "9.3.0"
secrecy = { version = "0.10.3", features = ["serde"] }
once_cell = "1.20.2"
serde = "1.0.215"
serde_json = "1.0.133"
sqlx = { version = "0.8.2", features = [
  "sqlite",
  "runtime-tokio",
  "tls-native-tls",
] }
thiserror = "2.0.3"
tokio = { version = "1.41.1", features = ["full"] }
tokio-util = "0.7.12"
tower-cookies = "0.10.0"
tower-http = { version = "0.6.1", features = ["fs", "cors"] }
tracing = { version = "0.1.40", features = ["attributes"] }
validator = { version = "0.19.0", features = ["derive"] }
utoipa = { version = "5.2.0" }
utoipa-axum = { version = "0.1.2" }
utoipa-swagger-ui = { version = "8.0.3", features = ["axum"] }
uuid = { version = "1.11.0", features = ["serde", "v4"] }
team-bot-entity = { path = "../entity" }
team-bot-service = { path = "../service" }
