[package]
name = "team-bot-entity"
version = "0.1.0"
authors = ["Old Punk <roman.efremenko@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
sqlx = { version = "0.8.2", features = [
  "sqlite",
  "runtime-tokio",
  "tls-native-tls",
  "chrono",
  "uuid",
] }
utoipa = { version = "5.2.0", features = ["chrono", "uuid"] }
uuid = { version = "1.11.0", features = ["serde", "v4"] }
