[package]
name = "team-bot-service"
version = "0.1.0"
authors = ["Old Punk <roman.efremenko@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.93"
argon2 = "0.5.3"
async-trait = "0.1.83"
chrono = { version = "0.4.38", features = ["serde"] }
chrono-tz = "0.10.0"
cron = "0.12.0"
curl = { version = "0.4.47", features = ["ssl", "static-curl", "ntlm"] }
duration-str = "0.11.2"
futures = "0.3.31"
governor = "0.7.0"
mini-moka = "0.10.3"
rand_core = { version = "0.6.4", features = ["std"] }
reqwest = { version = "0.12.9", features = ["json"] }
secrecy = { version = "0.10.3", features = ["serde"] }
serde = "1.0.215"
serde_json = "1.0.133"
strfmt = "0.2.4"
sqlx = { version = "0.8.2", features = [
  "sqlite",
  "runtime-tokio",
  "tls-native-tls",
] }
openssl-sys = { version = "0.9", features = ["vendored"] }
thiserror = "2.0.3"
tokio = { version = "1.41.1", features = ["full"] }
tokio-util = "0.7.12"
tracing = { version = "0.1.40", features = ["attributes"] }
regex = "1.11.1"
utoipa = { version = "5.2.0" }
uuid = { version = "1.11.0", features = ["serde", "v4"] }
team-bot-entity = { path = "../entity" }
